# neural_registration_comparison

./: .gitignore  README.md  check_result_files.py  result_statistics.py
extract_fpfh/: README.md  benchmark_helper.py  fpfh_benchmark.py  fpfh_benchmark2.py  run_fpfh_benchmark_global.py
fast_global_registration/: fast_global_benchmark.py  run_fgr_benchmark_global.sh  test_fast_global.py
ransac/: ransac_benchmark.py  test_ransac.py
registration_from_extracted_features/: FastGlobal_benchmark.py  FastGlobal_config.json  RANSAC_benchmark.py  README.md  TEASER_benchmark.py  benchmark_helpers.py  correspondence_helpers.py  registration_from_features.py  run_registration_global.py
registration_from_extracted_features/RANSAC/: helpers.py  ransac_benchmark.py  run_ransac_benchmark_global.py
registration_from_extracted_features/TEASER/: helpers.py  metric.py  requirements.txt  run_teaser_benchmark_global.py  run_teaser_benchmark_global.sh  teaser_benchmark.py
results/: example_features.csv  example_features.npz  example_result.txt
results/RoReg/: ETH_results.md
slam_example_utils/: README.md  align_and_evaluate.py  create_map.py  generate_problem_file.py  pioneer_slam2_problems.txt  tum_download.py
teaser/: run_teaser_benchmark_global.sh
utilities/: CMakeLists.txt  csv2npz.py  dimension_statistics.py  pcd_utils.hpp  unit_test.cpp
utilities/downsampling/: README.md  downsample_all.sh  downsample_folder.sh
utilities/results_utils/: boxplots.py  memory_statistics.py  residual_statistics.py  result_statistics.py  time_statistics.py
(+2068 files in other folders)
